manifest.json update

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cryptaid | Auxílio eletrônico para o jogo Cryptid",
+  "name": "Cryptaid",
   "short_name": "Cryptaid",
   "icons": [
     {
